# rfgis

./: .gitignore  Makefile.am  README  README.md  configure.ac
android/: rfgis.cpp
include/: RFGis.h  RFGisConfigure.h  RFGisPainter.h  RFGisPython.h  RFGisQMLMap.h  RFGisWorker.h
m4/: m4_ax_sip_devel.m4  makefile_verbosity.m4
programs/: rfgis.cpp
rfgis/model/: spatialfinder.py  spatialpair.py
rfgis/system/interactivenetconsole/: __init__.py
rfgis/system/interactivenetconsole/boot/: __init__.py
rfgis/system/preconfig/: __init__.py
rfgis_native/: RFGis.cpp  RFGisConfigure.cpp  RFGisMain.cpp  RFGisPainter.cpp  RFGisQMLMap.cpp  RFGisWorker.cpp
sip/: RFGis.sip  RFGisConfigure.sip  RFGisRouter.sip  RFGismod.sip
tests/unittests/: spatialfinder_test.py  spatialpair_test.py
